FIX::: replace on scroll.js => moving body by margin to transform:translate.           Remove the text overflow on ASAR/node.js hexagons. UPDATE::: style on mail link.

--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,7 @@ body>section {
 section.scrolling-background {
 	box-shadow: inset 0px 12px 20px -5px black, inset 0px -12px 20px -5px black
 }
+
+a.mail{
+	text-shadow: 1px 1px #81D4FA,-1px 1px #81D4FA;
+}
